infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats-streaming:0.21
        args: [
          '-p', '4222',
          '-m', '8222',
          '-hbi', '5s',
          '-hbt', '5s',
          '-hbf', '2',
          '-SD',
          '-cid', 'tickets'
        ]
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
  - name: client
    port: 4222
    targetPort: 4222
  - name: monitoring
    port: 8222
    targetPort: 8222
