infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: tickets.dev
    http:
      paths:
        - path: "/api/users/?(.*)"
          pathType: Prefix
          backend:
            service: 
              name: auth-srv
              port: 
                number: 3000

        - pathType: Prefix
          path: "/?(.*)"
          backend:
            service:
              name: client-srv
              port: 
                number: 3000
